--- a/Resources/views/News/archive_content.html.twig
+++ b/Resources/views/News/archive_content.html.twig
@@ -1,13 +1,10 @@
 <div id="news-archive">
     {% for news in newsPager.currentPageResults %}
         <div class="news">
-            <h2 class="title">
-                {#<a href="{{ url('fsi_gallery_page', {'id': gallery.id}) }}">#}
-                    {{ news.title }}
-                {#</a>#}
-            </h2>
+            <h2 class="title">{{ news.title }}</h2>
             <div class="date">{{ news.date|date("Y-m-d H:i:s") }}</div>
-            <p class="content">{{ news.content }}</p>
+            <div class="introduction">{{ news.introduction }}</div>
+            <a href="{{ url('fsi_news', {'id': news.id}) }}">{{ 'news.read_more'|trans({}, 'FSiNewsBundle') }}</a>
         </div>
     {% endfor %}
     <div class="pagination">
